Добавлены тестовые комментарии

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!--Мобильное меню-->
     <div class="modal-burger">
         <div class="content">
             <div class="modal-burger__title">
@@ -32,6 +33,7 @@
             </div>
         </div>
     </div>
+    <!--Фон для меню-->
     <div class="bg-black">
 
     </div>
