Исправлены все основные ошибки в index.html, в том числе исправлен адаптив

--- a/catalog.html
+++ b/catalog.html
@@ -25,7 +25,7 @@
                 <a href="#">Преимущества</a>
                 <a href="#">О нас</a>
                 <a href="#">Отзывы</a>
-                <a href="#" class="button-account__modal">ВОЙТИ</a>
+                <a href="#" class="button-account__modal">Войти</a>
             </div>
         </div>
     </div>
@@ -46,7 +46,7 @@
                     <a href="#" class="nav__a">Отзывы</a>
                 </div>
                 <div class="account">
-                    <a href="#" class="button-account">ВОЙТИ</a>
+                    <a href="#" class="button-account">Войти</a>
                     <a href="#" class="burger"><img src="assets/img/burger.png" alt=""></a>
                 </div>
             </div>
@@ -245,7 +245,7 @@
                     <a href="#" class="nav__a">Отзывы</a>
                 </div>
                 <div class="account">
-                    <a href="#" class="button-account">ВОЙТИ</a>
+                    <a href="#" class="button-account">Войти</a>
                     <a href="#" class="burger"><img src="assets/img/burger.png" alt=""></a>
                 </div>
             </div>
