--- a/gift.html
+++ b/gift.html
@@ -23,7 +23,7 @@
                 <a href="#">Преимущества</a>
                 <a href="#">О нас</a>
                 <a href="#">Отзывы</a>
-                <a href="#" class="button-account__modal">ВОЙТИ</a>
+                <a href="#" class="button-account__modal">Войти</a>
             </div>
         </div>
     </div>
