--- a/one-direction.html
+++ b/one-direction.html
@@ -28,7 +28,7 @@
                 <a href="#">Преимущества</a>
                 <a href="#">О нас</a>
                 <a href="#">Отзывы</a>
-                <a href="#" class="button-account__modal">ВОЙТИ</a>
+                <a href="#" class="button-account__modal">Войти</a>
             </div>
         </div>
     </div>
@@ -49,7 +49,7 @@
                     <a href="#" class="nav__a">Отзывы</a>
                 </div>
                 <div class="account">
-                    <a href="#" class="button-account">ВОЙТИ</a>
+                    <a href="#" class="button-account">Войти</a>
                     <a href="#" class="burger"><img src="assets/img/burger.png" alt=""></a>
                 </div>
             </div>
@@ -392,7 +392,7 @@
                     <a href="#" class="nav__a">Отзывы</a>
                 </div>
                 <div class="account">
-                    <a href="#" class="button-account">ВОЙТИ</a>
+                    <a href="#" class="button-account">Войти</a>
                     <a href="#" class="burger"><img src="assets/img/burger.png" alt=""></a>
                 </div>
             </div>
