Завершена верска старницы admin-panel-users

--- a/admin-panel-users.html
+++ b/admin-panel-users.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -153,7 +153,7 @@
                                             </button>                                      
                                         </form>
                                         <div class="admin-panel-info-new-users__buttons">
-                                            <a href="#" class="admin-panel-info-new-users__button">Все</a>
+                                            <a href="#" class="admin-panel-info-new-users__button active">Все</a>
                                             <a href="#" class="admin-panel-info-new-users__button">Новые</a>
                                             <a href="#" class="admin-panel-info-new-users__button">Без курса</a>
                                         </div>
