--- a/admin-panel-groups.html
+++ b/admin-panel-groups.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -134,44 +134,29 @@
                         <div class="admin-panel-content-aside__header admin-panel-content-aside-header">
                             <div class="admin-panel-content-aside-header__container">
                                 <h1 class="admin-panel-content-aside-header__title">Панель администратора</h1>
-                                <p class="admin-panel-content-aside-header__subtitle">Основная информация и статистика</p>
+                                <p class="admin-panel-content-aside-header__subtitle">Информация о группах</p>
                                 <div class="admin-panel-line"></div>
                             </div>
                         </div>
-                        <div class="admin-panel-content__info-list">
-                            <div class="admin-panel-content__info-item admin-panel-content-info-item">
-                                <h3 class="admin-panel-content-info-item__title">105</h3>
-                                <p class="admin-panel-content-info-item__subtitle">Зарегистрированных пользователей</p>
-                            </div>
-                            <div class="admin-panel-content__info-item admin-panel-content-info-item">
-                                <h3 class="admin-panel-content-info-item__title">7</h3>
-                                <p class="admin-panel-content-info-item__subtitle">Курсов</p>
-                            </div>
-                            <div class="admin-panel-content__info-item admin-panel-content-info-item">
-                                <h3 class="admin-panel-content-info-item__title">4</h3>
-                                <p class="admin-panel-content-info-item__subtitle">Сформированных групп</p>
-                            </div>
-                            <div class="admin-panel-content__info-item admin-panel-content-info-item">
-                                <h3 class="admin-panel-content-info-item__title">5</h3>
-                                <p class="admin-panel-content-info-item__subtitle">Активных заявок на запись</p>
-                            </div>
-                            <div class="admin-panel-content__info-item admin-panel-content-info-item">
-                                <h3 class="admin-panel-content-info-item__title">11</h3>
-                                <p class="admin-panel-content-info-item__subtitle">Заданий на проверку</p>
-                            </div>
-                        </div>
                         <div class="admin-panel-info__tables">
-                            <div class="admin-panel-info__new-users admin-panel-info-new-users admin-panel-info-new-groups">
+                            <div class="admin-panel-info__new-users admin-panel-info-new-users admin-panel-info-users">
                                 <div class="admin-panel-info-new-users__container">
                                     <div class="admin-panel-info-new-users__header">
-                                        <h3 class="admin-panel-info-new-users__title">Новые группы</h3>
-                                        <a class="admin-panel-info-new-users__link" href="#">Смотреть все
-                                            <span>
-                                                <svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                    <path d="M1 1.75L5.12504 5.87504C5.32846 6.07846 5.31869 6.41117 5.10367 6.6023L1 10.25" stroke="#6C63FF" stroke-width="2" stroke-linecap="round"/>
+                                        <h3 class="admin-panel-info-new-users__title">Пользователи</h3>
+                                        <form action="" class="admin-panel-info-new-users__form">
+                                            <input type="search" placeholder="Поиск пользователей">
+                                            <button type="submit">
+                                                <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <circle cx="6.5" cy="6.5" r="5.75" stroke="#1D1D39" stroke-opacity="0.6" stroke-width="1.5"/>
+                                                    <line x1="11.0607" y1="11" x2="16" y2="15.9393" stroke="#1D1D39" stroke-opacity="0.6" stroke-width="1.5" stroke-linecap="round"/>
                                                 </svg>
-                                            </span>
-                                        </a>
+                                            </button>                                      
+                                        </form>
+                                        <div class="admin-panel-info-new-users__buttons">
+                                            <a href="#" class="admin-panel-info-new-users__button active">Все</a>
+                                            <a href="#" class="admin-panel-info-new-users__button">Новые</a>
+                                            <a href="#" class="admin-panel-info-new-users__button">Без курса</a>
+                                        </div>
                                     </div>
                                     <div class="admin-panel-info-new-users__table new-users-table">
                                         <div class="new-users-table__item new-users-table__header">
@@ -209,43 +194,6 @@
                                             <p class="new-users-table__name">224 ВЕБ</p>
                                             <p class="new-users-table__name">25</p>
                                             <p class="new-users-table__name">Гиндуллин Аяз Ильгизович</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="admin-panel-info__new-groups admin-panel-info-new-groups">
-                                <div class="admin-panel-info-new-users__container">
-                                    <div class="admin-panel-info-new-users__header">
-                                        <h3 class="admin-panel-info-new-users__title">Новые пользователи</h3>
-                                        <a class="admin-panel-info-new-users__link" href="#">Смотреть всех
-                                            <span>
-                                                <svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                    <path d="M1 1.75L5.12504 5.87504C5.32846 6.07846 5.31869 6.41117 5.10367 6.6023L1 10.25" stroke="#6C63FF" stroke-width="2" stroke-linecap="round"/>
-                                                </svg>
-                                            </span>
-                                        </a>
-                                    </div>
-                                    <div class="admin-panel-info-new-users__table new-users-table">
-                                        <div class="new-users-table__item new-users-table__header">
-                                            <p class="new-users-table__name">id</p>
-                                            <p class="new-users-table__name">Фамилия</p>
-                                            <p class="new-users-table__name">Имя</p>
-                                            <p class="new-users-table__name">Отчество</p>
-                                            <p class="new-users-table__name">Email</p>
-                                        </div>
-                                        <div class="new-users-table__item">
-                                            <p class="new-users-table__name">01</p>
-                                            <p class="new-users-table__name">Иванов</p>
-                                            <p class="new-users-table__name">Иван</p>
-                                            <p class="new-users-table__name">Алексеевич</p>
-                                            <p class="new-users-table__name">ivanov_ivan@mail.ru</p>
-                                        </div>
-                                        <div class="new-users-table__item">
-                                            <p class="new-users-table__name">01</p>
-                                            <p class="new-users-table__name">Иванов</p>
-                                            <p class="new-users-table__name">Иван</p>
-                                            <p class="new-users-table__name">Алексеевич</p>
-                                            <p class="new-users-table__name">ivanov_ivan@mail.ru</p>
                                         </div>
                                     </div>
                                 </div>
