--- a/add-course.html
+++ b/add-course.html
@@ -86,13 +86,13 @@
                         <form action="" enctype="multipart/form-data">
                             <input type="text" name="course_name" class="add-course-form__input" placeholder="Название курса">
                             <select name="categories" class="add-course-form__input add-course-form__select">
-                                <option value="0" selected default disabled>Категория</option>
+                                <option value="0" selected disabled>Категория</option>
                                 <option value="1">Веб-разработка</option>
                                 <option value="2">Веб-дизайн</option>
                             </select>
                             <input type="text" name="count" class="add-course-form__input" placeholder="Количество очных занятий">
                             <select name="teachers" class="add-course-form__input add-course-form__select">
-                                <option value="0" selected default disabled>Преподаватель</option>
+                                <option value="0" selected disabled>Преподаватель</option>
                                 <option value="1">Зарипов Руслан Ринатович</option>
                                 <option value="2">Тихонов Алексей Иванович</option>
                             </select>
