--- a/one-direction.html
+++ b/one-direction.html
@@ -375,6 +375,9 @@
                 </div>
             </div>
         </section>
+        <section class="subscribe__now">
+            
+        </section>
     </main>
     <footer>
         <div class="container">
