--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
     <script src="js/index.js" defer></script>
     <script src="js/slider.js" defer></script>
     <link rel="stylesheet" href="css/style.css">
@@ -120,7 +120,7 @@
                         </div>
                         <div class="best-course__lessons">
                             <div class="best-course__time">
-                                <div class="lesson">
+                                <div class="catalog-lesson">
                                     12 уроков
                                 </div>
                                 <div class="time">
@@ -128,6 +128,7 @@
                                 </div>
                             </div>
                             <a href="#" class="arrow">
+                                Подробнее
                                 <img src="assets/img/arrow2.png" alt="">
                             </a>
                         </div>
@@ -151,7 +152,7 @@
                         </div>
                         <div class="best-course__lessons">
                             <div class="best-course__time">
-                                <div class="lesson">
+                                <div class="catalog-lesson">
                                     12 уроков
                                 </div>
                                 <div class="time">
@@ -159,6 +160,7 @@
                                 </div>
                             </div>
                             <a href="#" class="arrow">
+                                Подробнее
                                 <img src="assets/img/arrow2.png" alt="">
                             </a>
                         </div>
@@ -182,7 +184,7 @@
                         </div>
                         <div class="best-course__lessons">
                             <div class="best-course__time">
-                                <div class="lesson">
+                                <div class="catalog-lesson">
                                     12 уроков
                                 </div>
                                 <div class="time">
@@ -190,6 +192,7 @@
                                 </div>
                             </div>
                             <a href="#" class="arrow">
+                                Подробнее
                                 <img src="assets/img/arrow2.png" alt="">
                             </a>
                         </div>
@@ -213,7 +216,7 @@
                         </div>
                         <div class="best-course__lessons">
                             <div class="best-course__time">
-                                <div class="lesson">
+                                <div class="catalog-lesson">
                                     12 уроков
                                 </div>
                                 <div class="time">
@@ -221,6 +224,7 @@
                                 </div>
                             </div>
                             <a href="#" class="arrow">
+                                Подробнее
                                 <img src="assets/img/arrow2.png" alt="">
                             </a>
                         </div>
